Change font type, background color and fix spacing

--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(180deg, #fdfcfb 0%, #ab8ecb 100%);
+    font-family: Lucida Console, Courier New, monospace;
+    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
     background-repeat: no-repeat;
     height: 100vh;
 }
@@ -39,6 +39,7 @@ body{
 
 .greetings{
     font-size: 2.5em;
+    margin: 0.5em 0;
 }
 
 .name-surname{
@@ -55,10 +56,9 @@ body{
 }
 
 .link-button span{
-    font-weight: 600;
-    visibility: hidden;
-    opacity: 0;
-    text-orientation: upright;
+    font-weight: 500;
+    /* visibility: hidden;
+    opacity: 0; */
 }
 
 /* .link-button:hover .tooltip-text {
@@ -75,7 +75,7 @@ body{
     height: 60px;
     border: 2px solid #505050;
     border-radius: 100%;
-    margin: 1em;
+    margin: 1em 1.5em;
     background-color: black;
     box-sizing: border-box;
 }
